[package]
name = "dem"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "dem-agent"
path = "src/bin/agent.rs"

[[bin]]
name = "dem-server"
path = "src/bin/server.rs"
